--- a/build.gradle
+++ b/build.gradle
@@ -22,15 +22,13 @@
 buildscript {
 
     repositories {
-        google()
         jcenter()
+        mavenCentral()
 
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
-        classpath 'com.google.gms:google-services:4.0.1' // google-services plugin
-
-//        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -39,7 +37,6 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
         maven { url "https://jitpack.io" }
 
